# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased] - 2025-xx-xx

## [1.2.0] - 2025-xx-xx

### Added
- A tool to send notifications to groups during bot maintenance
- A note stating that we assume no responsibility for any damage

### Fixed
- Once an impostor was reported, they could vote 'no'
- Improvment Dockerfile

### Changed
- When the poll asking if we still want to go out despite the bad weather appears, now require at least one vote
- At the end of a biker outing poll, only those who shared their total kilometers are shown

## [1.1.1] - 2025-11-10

### Fixed
- Image also compatible with the arm64 architecture
- If the command "show settings" is executed without ever having been modified, it generates an error.

### Changed
- build code
- improvment dockerfile

### Removed
- old command "set_time"


## [1.1.0] - 2025-11-10

### Fixed
- Not generate correctly new date when create one model
- Missing update timezone when change location
- Time zone not handled correctly

### Changed
- Replace "Time trigger" with "Time start"
- Move percentage to bottom of the emoji rain

### Added
- If you share your location and when the poll closes, you'll receive a summary of your movements.
- Score multiplier
- Impostor
- End-of-year report


## [1.0.0] - 2025-07-20