@@ -8,7 +8,7 @@ import { GroupErrorGeneric, GroupNotFound, PollErrorGeneric, PollNotFound, UserE
 
 const logger = Logger("bot-utils");
 
-export const RESPONSIBILITY_POLICY = "\n\n ⚠️⚠️ PLEASE NOTE ⚠️⚠️: That the data may be inaccurate, and we assume no responsibility for any damage";
+export const RESPONSIBILITY_POLICY = "\n⚠️⚠️ PLEASE NOTE ⚠️⚠️: That the data may be inaccurate, and we assume no responsibility for any damage";
 
 export enum commands {
     SET_LOCATION = "set_location",
@@ -17,7 +17,8 @@ export enum commands {
     SHOW_SETTINGS = "show_settings",
     SET_START_TIME_GUARDIAN = "set_start_time_guardian",
     SET_END_TIME_GUARDIAN = "set_end_time_guardian",
-    IMPOSTOR = "impostor"
+    IMPOSTOR = "impostor",
+    ABOUT = "about"
 }
 
 export function onlyPermissionGroup(message: TelegramBot.Message){
@@ -118,3 +119,31 @@ export function timeCommand(time: string): { text: string }[][]{
 export function createMention(message: { first_name: string, user_id: number }, text: string){
     return `[${message.first_name}](tg://user?id=${message.user_id}) ${text.replace(/([_*\[\]()~`>#+=|{}.!-])/g, "\\$1")}`;
 }
+
+export const MESSAGE_WELCOME =
+`
+Hello bikers! 🏍️💨
+
+From now on, I will be here to protect you from bad weather.
+
+What can this bot do?
+- It is possible to configure this bot to adapt your outings.
+- There is a mini-game where each player who goes out will earn points, and at the end of the year the winner will be announced.
+
+And more new features will come in the future!💡
+
+Explanation for the mini-game🎮:
+When the weather monitoring starts, the mini-game will also automatically begin, where each player who goes out can earn points and at the end of the year an official ranking will be released announcing the top three winners.
+
+There will be three cases:
+1. If the weather forecast shows sun all day, a poll will appear that will give you one point if you went out.
+2. If the weather forecast shows more than 25% chance of rain, a poll will appear asking if you still want to go out despite the risk. To pass this question, at least 1 people must vote. If passed, another poll will appear that will give you double points if you didn't get wet, and if you did get wet, you will lose the double points!
+3. If the weather forecast shows 100% rain, no poll will appear.
+
+⚠️⚠️ PLEASE NOTE ⚠️⚠️:
+- Weather conditions cannot be predicted with 100% accuracy, and the APIs used to obtain weather data may be inaccurate. Therefore, incorrect data may be provided, and we assume no responsibility for any damage.
+- The collection of location data will be deleted at the end of the poll, and only the kilometers traveled will be taken into account.
+- If you remove the bot from the group, all data will be deleted!
+
+Enough with the explanations now, have fun bikers!🏍️💨
+`;
