@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - A tool to send notifications to groups during bot maintenance
 - A note stating that we assume no responsibility for any damage
+- New command "About" for everyone
 
 ### Fixed
 - Once an impostor was reported, they could vote 'no'
